--- a/RestWebService/pom.xml
+++ b/RestWebService/pom.xml
@@ -56,6 +56,24 @@
   <artifactId>RestDB</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   </dependency>
+  <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-core</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.3</version>
+      <scope>test</scope>
+    </dependency>
 	</dependencies>
   <url>http://maven.apache.org</url>
   <name>WebService</name>
